@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-6.0.3,v 1.1.2.15 2013/07/30 04:09:45 msaitoh Exp $
+# $NetBSD: CHANGES-6.0.3,v 1.1.2.16 2013/08/02 20:23:11 martin Exp $
 
 A complete list of changes from the NetBSD 6.0.2 release to the NetBSD 6.0.3
 release:
@@ -162,3 +162,9 @@ sys/net/if_mpls.c				1.9
 
 	Stop abusing kmem during softint context to prevent panic.
 	[kefren, ticket #921]
+
+sys/kern/uipc_socket.c				1.216
+
+	Fix an inversion in checking for authorization to drop TCP connections
+	found (and the obvious fix suggested) by Sander Bos.
+	[spz, ticket #927]
